# Projeto-Agente-IA---Google-Calendar

agente_google_calendar-main/: README.md  app.py  calendar_tool.py  google_api.py  google_calendar_functions.py  meu_agente.py  pyproject.toml
agente_google_calendar-main/excalidraw_files/: Agente Google Calendar.excalidraw
